@@ -2113,12 +2113,13 @@ static void _real_close(GormDocument *self,
  * Set aName for object in the document.  If aName is nil,
  * a name is automatically created for object.
  */
-- (void) setName: (NSString*)aName forObject: (id)object
+- (void) setName: (NSString*)someName forObject: (id)object
 {
   id		       oldObject = nil;
   NSString	      *oldName = nil;
   NSMutableDictionary *cc = [classManager customClassMap];
   NSString            *className = nil;
+  NSString            *aName = [someName copy];
 
   if (object == nil)
     {
@@ -2209,10 +2210,13 @@ static void _real_close(GormDocument *self,
   if(cc != nil)
     {
       className = [cc objectForKey: oldName];
+      RETAIN(className);
       if(className != nil)
 	{
+	  RETAIN(oldName);
 	  [cc removeObjectForKey: oldName];
 	  [cc setObject: className forKey: aName]; 
+	  RELEASE(oldName);
 	}
     }
 
